# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "data",
    data = [
        "breast_cancer",
        "perfect_logit",
        "psi",
    ],
)

filegroup(
    name = "breast_cancer",
    srcs = [
        "breast_cancer_a.csv",  # from sklearn.dataset load_breast_cancer
        "breast_cancer_b.csv",  # from sklearn.dataset load_breast_cancer
    ],
)

filegroup(
    name = "perfect_logit",
    srcs = [
        "perfect_logit_a.csv",  # generated, perfect linear
        "perfect_logit_b.csv",  # generated, perfect linear
    ],
)

filegroup(
    name = "psi",
    srcs = [
        "psi_1.csv",
        "psi_2.csv",
    ],
)
