# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:spu.bzl", "spu_cc_library")

package(default_visibility = ["//visibility:public"])

spu_cc_library(
    name = "io_interface",
    hdrs = ["io_interface.h"],
    deps = [
        "//libspu/core:array_ref",
        "//libspu/core:type",
    ],
)

spu_cc_library(
    name = "io_test",
    testonly = 1,
    srcs = ["io_test.cc"],
    hdrs = ["io_test.h"],
    deps = [
        ":io_interface",
        "//libspu/mpc/util:ring_ops",
        "//libspu/mpc/util:simulate",
        "@com_google_googletest//:gtest",
    ],
    alwayslink = True,
)

spu_cc_library(
    name = "factory",
    srcs = ["factory.cc"],
    hdrs = ["factory.h"],
    deps = [
        "//libspu:spu_cc_proto",
        "//libspu/mpc/aby3",
        "//libspu/mpc/cheetah",
        "//libspu/mpc/ref2k",
        "//libspu/mpc/semi2k",
    ],
)

spu_cc_library(
    name = "kernel",
    srcs = ["kernel.cc"],
    hdrs = ["kernel.h"],
    deps = [
        ":object",
    ],
)

spu_cc_library(
    name = "object",
    srcs = ["object.cc"],
    hdrs = ["object.h"],
    deps = [
        "//libspu/core:array_ref",
        "//libspu/core:trace",
        "//libspu/core:type",
        "//libspu/mpc/util:cexpr",
    ],
)

spu_cc_library(
    name = "api",
    srcs = ["api.cc"],
    hdrs = ["api.h"],
    deps = [
        ":object",
        "//libspu/core:array_ref",
    ],
)

spu_cc_library(
    name = "api_test",
    testonly = 1,
    srcs = ["api_test.cc"],
    hdrs = ["api_test.h"],
    deps = [
        ":api",
        ":object",
        "//libspu/mpc/common:communicator",
        "//libspu/mpc/util:simulate",
        "@com_google_googletest//:gtest",
    ],
    alwayslink = True,
)
