# Copyright 2022 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:spu.bzl", "spu_cc_library", "spu_cc_test")

package(default_visibility = ["//visibility:public"])

spu_cc_library(
    name = "seal_pir",
    srcs = ["seal_pir.cc"],
    hdrs = ["seal_pir.h"],
    linkopts = [
        "-ldl",
        "-lm",
    ],
    deps = [
        ":seal_pir_utils",
        ":serializable_cc_proto",
        "//libspu/core:prelude",
        "@com_github_microsoft_seal//:seal",
        "@com_github_openssl_openssl//:openssl",
        "@yacl//yacl/base:byte_container_view",
        "@yacl//yacl/link",
        "@yacl//yacl/utils:parallel",
    ],
)

spu_cc_library(
    name = "seal_pir_utils",
    srcs = ["seal_pir_utils.cc"],
    hdrs = ["seal_pir_utils.h"],
    deps = [
        "//libspu/core:prelude",
        "@com_github_microsoft_seal//:seal",
    ],
)

spu_cc_library(
    name = "seal_mpir",
    srcs = ["seal_mpir.cc"],
    hdrs = ["seal_mpir.h"],
    deps = [
        ":seal_pir",
        "//libspu/psi/core:cuckoo_index",
        "@yacl//yacl/crypto/base:symmetric_crypto",
    ],
)

proto_library(
    name = "serializable_proto",
    srcs = ["serializable.proto"],
)

cc_proto_library(
    name = "serializable_cc_proto",
    deps = [":serializable_proto"],
)

spu_cc_test(
    name = "seal_pir_test",
    srcs = ["seal_pir_test.cc"],
    deps = [
        ":seal_pir",
    ],
)

spu_cc_test(
    name = "seal_mpir_test",
    srcs = ["seal_mpir_test.cc"],
    deps = [
        ":seal_mpir",
        "//libspu/psi/cryptor:sodium_curve25519_cryptor",
        "@com_google_absl//absl/strings",
    ],
)

proto_library(
    name = "pir_proto",
    srcs = ["pir.proto"],
)

cc_proto_library(
    name = "pir_cc_proto",
    deps = [":pir_proto"],
)

spu_cc_library(
    name = "pir",
    srcs = ["pir.cc"],
    hdrs = ["pir.h"],
    deps = [
        ":pir_cc_proto",
        "//libspu/psi/core:cuckoo_index",
        "//libspu/psi/core/labeled_psi",
        "@yacl//yacl/crypto/base:symmetric_crypto",
    ],
)
