load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "glm",
    srcs = ["glm.py"],
    deps = [
        "//sml/utils:fxp_approx",
    ],
)

py_binary(
    name = "glm_emul",
    srcs = ["glm_emul.py"],
    deps = [
        ":glm",
        "//examples/python/utils:dataset_utils",  # FIXME: remove examples dependency
        "//sml/utils:emulation",
    ],
)

py_test(
    name = "glm_test",
    srcs = ["glm_test.py"],
    data = [
        "//examples/python/conf",  # FIXME: remove examples dependency
    ],
    deps = [
        ":glm",
        "//examples/python/utils:dataset_utils",  # FIXME: remove examples dependency
        "//spu:init",
        "//spu/utils:simulation",
    ],
)
