load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "kmeans",
    srcs = ["kmeans.py"],
    deps = [
        "//sml/utils:fxp_approx",
    ],
)

py_binary(
    name = "kmeans_emul",
    srcs = ["kmeans_emul.py"],
    deps = [
        ":kmeans",
        "//examples/python/utils:dataset_utils",  # FIXME: remove examples dependency
        "//sml/utils:emulation"
    ],
)



py_test(
    name = "kmeans_test",
    srcs = ["kmeans_test.py"],
    data = [
        "//examples/python/conf",  # FIXME: remove examples dependency
    ],
    deps = [
        ":kmeans",
        "//examples/python/utils:dataset_utils",  # FIXME: remove examples dependency
        "//spu:init",
        "//spu/utils:simulation",
    ],
)
