# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "simple_sgd",
    srcs = ["simple_sgd.py"],
    deps = [
        "//sml/utils:fxp_approx",
    ],
)

py_binary(
    name = "simple_sgd_emul",
    srcs = ["simple_sgd_emul.py"],
    deps = [
        ":simple_sgd",
        "//examples/python/utils:dataset_utils",  # FIXME: remove examples dependency
        "//sml/utils:emulation",
    ],
)

py_test(
    name = "simple_sgd_test",
    srcs = ["simple_sgd_test.py"],
    data = [
        "//examples/python/conf",  # FIXME: remove examples dependency
    ],
    deps = [
        ":simple_sgd",
        "//examples/python/utils:dataset_utils",  # FIXME: remove examples dependency
        "//spu:init",
        "//spu/utils:simulation",
    ],
)
