# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "sgd_classifier",
    srcs = ["sgd_classifier.py"],
    deps = [
        "//sml/utils:fxp_approx",
    ],
)

py_library(
    name = "logistic",
    srcs = ["logistic.py"],
    deps = [
        "//sml/utils:fxp_approx",
    ],
)

py_library(
    name = "ridge",
    srcs = ["ridge.py"],
    deps = [
        "//sml/utils:extmath",
    ],
)

py_library(
    name = "pla",
    srcs = ["pla.py"],
)

py_binary(
    name = "glm",
    srcs = ["glm.py"],
    deps = [
        "//sml/linear_model/utils:link",
        "//sml/linear_model/utils:loss",
        "//sml/linear_model/utils:solver",
    ],
)

py_library(
    name = "quantile",
    srcs = ["quantile.py"],
    deps = [
        "//sml/linear_model/utils:_linprog_simplex",
    ],
)
