# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "exported_symbols.lds",
        "version_script.lds",
    ],
    visibility = ["//visibility:private"],
)

pybind_extension(
    name = "_lib",
    srcs = ["_lib.cc"],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-Wl,-exported_symbols_list,$(location //spu/binding:exported_symbols.lds)",
        ],
        "//conditions:default": [
            "-Wl,--version-script,$(location //spu/binding:version_script.lds)",
        ],
    }),
    deps = [
        ":exported_symbols.lds",
        ":version_script.lds",
        "//spu/compiler:compile",
        "//spu/compiler/common:compilation_context",
        "//spu/device:io",
        "//spu/device/pphlo:executor",
        "//spu/psi:bucket_psi",
        "//spu/psi:memory_psi",
        "@yacl//yacl/link",
    ],
)

py_library(
    name = "api",
    srcs = ["api.py"],
    data = [
        ":_lib.so",
    ],
    deps = [
        "//spu:spu_py_proto",
    ],
)

py_library(
    name = "psi",
    srcs = ["psi.py"],
    data = [
        ":_lib.so",
    ],
    deps = [
        "//spu/psi:psi_py_proto",
    ],
)
